--- a/src/app/components/modals/popup-modal.html
+++ b/src/app/components/modals/popup-modal.html
@@ -4,17 +4,6 @@
         <h3 class="text-2xl font-bold mb-4">{{ song?.title }}</h3>
         <img [src]="song?.cover" alt="Album Cover for {{ song?.title }}" class="w-32 h-32 mb-6 mx-auto rounded-lg">
         <p class="text-gray-400 mb-3">Choose your preferred streaming service to listen to the {{ song?.type?.toLowerCase() }}.</p>
-        <!-- <div class="flex flex-col space-y-4">
-            @if (song?.links?.spotify) {
-                <a [href]="song?.links?.spotify" target="_blank" class="bg-[#10BC4C] hover:opacity-70 text-white py-3 px-6 rounded-lg font-semibold transition-opacity duration-300">Spotify</a>
-            }
-            @if (song?.links?.apple) {
-                <a [href]="song?.links?.apple" target="_blank" class="bg-[#fa596b] hover:opacity-70 text-white py-3 px-6 rounded-lg font-semibold transition-opacity duration-300">Apple Music</a>
-            }
-            @if (song?.links?.youtube) {
-                <a [href]="song?.links?.youtube" target="_blank" class="bg-red-600 hover:opacity-70 text-white py-3 px-6 rounded-lg font-semibold transition-opacity duration-300">YouTube Music</a>
-            }
-        </div> -->
         <div class="flex flex-row flex-wrap gap-3 justify-center mx-auto">
             @if (song?.links?.spotify) {
                 <a [href]="song?.links?.spotify" target="_blank" class="px-4 py-1 w-30 max-w-60 h-auto bg-gray-800 hover:bg-gray-900 mx-auto rounded-xl transition-background duration-300">
@@ -36,6 +25,9 @@
             }
             @if (song?.links?.others) {
                 <a [href]="song?.links?.others" target="_blank" class="bg-gray-800 hover:bg-gray-900 text-white py-3 px-6 rounded-lg font-semibold transition-background duration-300 basis-full">Others</a>
+            }
+            @if (!song?.links?.apple && !song?.links?.others && !song?.links?.spotify && !song?.links?.youtube && song?.presave) {
+                <a [href]="song?.presave" target="_blank" class="bg-blue-600 hover:bg-blue-800 text-white py-3 px-6 rounded-lg font-semibold transition-background duration-300 basis-full">Pre-save!</a>
             }
         </div>
     </div>
