--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -5,7 +5,7 @@
         <div class="relative z-10 p-6 rounded-xl max-w-2xl">
             <h1 class="text-5xl md:text-7xl font-bold tracking-tight text-white mb-4">Lüdtwig Schmüdy</h1>
             <p class="text-xl md:text-2xl text-gray-300 mb-8">The official home of the music, merch, and mind of Lüdtwig Schmüdy.</p>
-            <a href="#music" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-full transition-transform transform hover:scale-105">Discover the Music</a>
+            <a href="#music" class="bg-blue-600 hover:bg-blue-800 text-white font-bold py-3 px-8 rounded-full transition-transform transform hover:scale-105">Discover the Music</a>
         </div>
     </section>
 
@@ -29,7 +29,7 @@
                             @else {
                                 <p class="text-gray-400">Released {{ song.release | dateFormat }}</p>
                             }
-                            <button (click)="openModal(song)" class="cursor-pointer listen-btn mt-4 inline-block bg-blue-600 hover:bg-blue-700 text-white py-2 px-6 rounded-full text-sm font-semibold">Listen Now</button>
+                            <button (click)="openModal(song)" class="cursor-pointer listen-btn mt-4 inline-block bg-blue-600 hover:bg-blue-800 text-white py-2 px-6 rounded-full text-sm font-semibold transition-background duration-300">Listen Now</button>
                         </div>
                         @if (song.release.getTime() > now) {
                             <div class="absolute top-10 left-15 bg-blue-600 text-white py-2 w-full transform -translate-1/2 -rotate-30 shadow-lg shadow-white/30">
@@ -59,7 +59,7 @@
                         <img src="/images/shop/{{ item.type }}.png" alt="display image for {{ item.name }}" class="w-full h-auto rounded-xl mb-4">
                         <h3 class="text-xl font-semibold mb-2">{{ item.name }}</h3>
                         <p class="text-lg font-bold text-blue-400 mb-4">${{ item.price }}</p>
-                        <button class="buy-btn bg-blue-600 hover:bg-blue-700 text-white py-2 px-6 rounded-full font-semibold">Buy Now</button>
+                        <button class="buy-btn bg-blue-600 hover:bg-blue-800 text-white py-2 px-6 rounded-full font-semibold">Buy Now</button>
                     </div>
                 }
                 @empty {
@@ -119,7 +119,7 @@
                         <label for="message" class="block text-sm font-medium text-gray-400 text-left mb-2">Message</label>
                         <textarea id="message" name="message" rows="4" class="w-full px-4 py-3 rounded-lg focus:outline-none focus:ring focus:ring-blue-500" placeholder="Your Message" required></textarea>
                     </div>
-                    <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg transition-transform transform hover:scale-105">Send Message</button>
+                    <button type="submit" class="w-full bg-blue-600 hover:bg-blue-800 text-white font-bold py-3 px-4 rounded-lg transition-transform transform hover:scale-105">Send Message</button>
                 </form>
                 <div id="form-message" class="form-message mt-4 text-center opacity-0"></div>
                 <div id="contact-cover" class="backdrop-blur-[3px] w-full h-full inset-0 bg-gray-900/25 rounded-xl absolute flex flex-col items-center justify-center">
