--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -6,8 +6,7 @@
         <div class="mt-4 sm:mt-0 flex flex-wrap justify-center sm:space-x-4">
             <a routerLink="/" routerLinkActive="nav-active" [routerLinkActiveOptions]="{exact:true}" class="nav-link text-gray-400 hover:text-white px-3 py-2 rounded-lg font-medium transition-colors duration-300"><span class="hidden md:inline"><mat-icon fontIcon="home"></mat-icon></span>Home</a>
             <a routerLink="/music" routerLinkActive="nav-active" class="nav-link text-gray-400 hover:text-white px-3 py-2 rounded-lg font-medium transition-colors duration-300"><span class="hidden md:inline"><mat-icon fontIcon="music_note"></mat-icon></span>Music</a>
-            <a routerLink="/shop" routerLinkActive="nav-active" class="nav-link text-gray-400 hover:text-white px-3 py-2 rounded-lg font-medium transition-colors duration-300"><span class="hidden md:inline"><mat-icon fontIcon="shopping_bag"></mat-icon></span>Shop</a>
-            <a routerLink="/blog" routerLinkActive="nav-active" class="nav-link text-gray-400 hover:text-white px-3 py-2 rounded-lg font-medium transition-colors duration-300"><span class="hidden md:inline"><mat-icon fontIcon="newspaper"></mat-icon></span>Blog</a>
+            <!-- <a routerLink="/shop" routerLinkActive="nav-active" class="nav-link text-gray-400 hover:text-white px-3 py-2 rounded-lg font-medium transition-colors duration-300"><span class="hidden md:inline"><mat-icon fontIcon="shopping_bag"></mat-icon></span>Shop</a> -->
             <a routerLink="/contact" routerLinkActive="nav-active" class="nav-link text-gray-400 hover:text-white px-3 py-2 rounded-lg font-medium transition-colors duration-300"><span class="hidden md:inline"><mat-icon fontIcon="contact_support"></mat-icon></span>Contact</a>
         </div>
     </nav>
